fix: add gap on devices with vw < 400

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -71,6 +71,7 @@ body {
 	padding: 0.5rem;
 	border-radius: 0.5rem;
 	background-color: var(--color-dark-2);
+	gap: 0.5rem;
 
 	@media screen and (min-width: 400px) {
 		padding: 0.75rem;
